--- a/index.html
+++ b/index.html
@@ -30,39 +30,26 @@
   <!-- START HOMEPAGE ZANI en WAIL -->
   <section class="homePage">
 
-    <svg
-    id="visual"
-    viewBox="0 0 960 540"
-    width="1080"
-    height="540"
-    xmlns="http://www.w3.org/2000/svg"
-    xmlns:xlink="http://www.w3.org/1999/xlink"
-    version="1.1"
-  >
-    <g transform="translate(447.8299336819108 288.9238075637941)">
-      <path
-        id="blob1"
-        d="M107 -108.6C150.3 -63.6 205.2 -31.8 220.4 15.2C235.6 62.2 211.1 124.5 167.8 156.5C124.5 188.5 62.2 190.2 0.2 190C-61.8 189.8 -123.5 187.5 -147.2 155.5C-170.8 123.5 -156.4 61.8 -154.5 1.9C-152.6 -58 -163.3 -116 -139.6 -161C-116 -206 -58 -238 -13.1 -224.9C31.8 -211.8 63.6 -153.6 107 -108.6"
-        fill="#FFFFFF"
-      ></path>
-    </g>
+    <svg id="visual" viewBox="0 0 960 540" width="1080" height="540" xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+      <g transform="translate(447.8299336819108 288.9238075637941)">
+        <path id="blob1"
+          d="M107 -108.6C150.3 -63.6 205.2 -31.8 220.4 15.2C235.6 62.2 211.1 124.5 167.8 156.5C124.5 188.5 62.2 190.2 0.2 190C-61.8 189.8 -123.5 187.5 -147.2 155.5C-170.8 123.5 -156.4 61.8 -154.5 1.9C-152.6 -58 -163.3 -116 -139.6 -161C-116 -206 -58 -238 -13.1 -224.9C31.8 -211.8 63.6 -153.6 107 -108.6"
+          fill="#FFFFFF"></path>
+      </g>
 
-    <g
-      transform="translate(514.0358114499625 238.07162960424017)"
-      style="visibility: hidden"
-    >
-      <path
-        id="blob2"
-        d="M117.8 -117.3C140.8 -94.8 139.4 -47.4 136.3 -3.1C133.2 41.2 128.5 82.5 105.5 127.5C82.5 172.5 41.2 221.2 0 221.2C-41.2 221.2 -82.5 172.5 -120.3 127.5C-158.2 82.5 -192.6 41.2 -202.8 -10.3C-213.1 -61.8 -199.2 -123.5 -161.3 -146C-123.5 -168.5 -61.8 -151.8 -7.2 -144.6C47.4 -137.4 94.8 -139.8 117.8 -117.3"
-        fill="#FFFFFF"
-      ></path>
-    </g>
-  </svg>
-  <div class="custom-shape-divider-bottom-1643461390">
-    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-        <path d="M1200,0H0V120H281.94C572.9,116.24,602.45,3.86,602.45,3.86h0S632,116.24,923,120h277Z" class="shape-fill"></path>
+      <g transform="translate(514.0358114499625 238.07162960424017)" style="visibility: hidden">
+        <path id="blob2"
+          d="M117.8 -117.3C140.8 -94.8 139.4 -47.4 136.3 -3.1C133.2 41.2 128.5 82.5 105.5 127.5C82.5 172.5 41.2 221.2 0 221.2C-41.2 221.2 -82.5 172.5 -120.3 127.5C-158.2 82.5 -192.6 41.2 -202.8 -10.3C-213.1 -61.8 -199.2 -123.5 -161.3 -146C-123.5 -168.5 -61.8 -151.8 -7.2 -144.6C47.4 -137.4 94.8 -139.8 117.8 -117.3"
+          fill="#FFFFFF"></path>
+      </g>
     </svg>
-  </div>
+    <div class="custom-shape-divider-bottom-1643461390">
+      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M1200,0H0V120H281.94C572.9,116.24,602.45,3.86,602.45,3.86h0S632,116.24,923,120h277Z"
+          class="shape-fill"></path>
+      </svg>
+    </div>
   </section>
   <!-- END HOMEPAGE -->
 
@@ -100,13 +87,14 @@
         </div>
       </div>
     </div>
-   <section class="section-divider2">
-    <div class="custom-shape-divider-bottom-1643461391">
-      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-          <path d="M1200,0H0V120H281.94C572.9,116.24,602.45,3.86,602.45,3.86h0S632,116.24,923,120h277Z" class="shape-fill"></path>
-      </svg>
-    </div>
-   </section>
+    <section class="section-divider2">
+      <div class="custom-shape-divider-bottom-1643461391">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M1200,0H0V120H281.94C572.9,116.24,602.45,3.86,602.45,3.86h0S632,116.24,923,120h277Z"
+            class="shape-fill"></path>
+        </svg>
+      </div>
+    </section>
   </section>
   <!-- END of second page -->
   <!-- Red stroke -->
@@ -132,42 +120,52 @@
       <li></li>
     </ul>
   </div>
+
   <div class="cards">
     <!-- Card -->
-    <div class="card">
-      <div class="card-image">
-        <i class="fas fa-comments"></i>
+    <a href="fase1.html" id="redirection-fase1">
+      <div class="card">
+        <div class="card-image">
+          <i class="fas fa-comments"></i>
+        </div>
+
+
+        <div class="card-body">
+          <h4 class="card-title">Fase I</h4>
+          <p>Interprofessionele <span class="red">kennismaking</span> & basisvaardigheden</p>
+        </div>
+
       </div>
-      <div class="card-body">
-        <h4 class="card-title">Fase I</h4>
-        <p>Interprofessionele <span class="red">kennismaking</span> & basisvaardigheden</p>
-      </div>
-    </div>
+    </a>
     <!-- end of card -->
 
     <!-- Card -->
-    <div class="card">
-      <div class="card-image">
-        <i class="fas fa-handshake"></i>
+    <a href="fase2.html" id="redirection-fase2">
+      <div class="card">
+        <div class="card-image">
+          <i class="fas fa-handshake"></i>
+        </div>
+        <div class="card-body">
+          <h4 class="card-title">Fase II</h4>
+          <p>Interprofessionele <span class="red">zorgtaken</span> in simulatiesetting</p>
+        </div>
       </div>
-      <div class="card-body">
-        <h4 class="card-title">Fase II</h4>
-        <p>Interprofessionele <span class="red">zorgtaken</span> in simulatiesetting</p>
-      </div>
-    </div>
+    </a>
     <!-- end of card -->
 
 
     <!-- Card -->
-    <div class="card">
-      <div class="card-image">
-        <i class="fas fa-briefcase"></i>
+    <a href="fase3.html" id="redirection-fase3">
+      <div class="card">
+        <div class="card-image">
+          <i class="fas fa-briefcase"></i>
+        </div>
+        <div class="card-body">
+          <h4 class="card-title">Fase III</h4>
+          <p>Interprofessionele <span class="red">zorg</span> op de <span class="red">werkvloer</span></p>
+        </div>
       </div>
-      <div class="card-body">
-        <h4 class="card-title">Fase III</h4>
-        <p>Interprofessionele <span class="red">zorg</span> op de <span class="red">werkvloer</span></p>
-      </div>
-    </div>
+    </a>
     <!-- end of card -->
 
   </div>
@@ -267,41 +265,79 @@
       speed: 2500
     });
 
-////////////////////////////////////
-///// svg animation (homePage) /////
-///////////////////////////////////
-const tween = KUTE.fromTo(
-  "#blob1",
-  { path: "#blob1" },
-  { path: "#blob2" },
-  { repeat: 999, duration: 7000, yoyo: true }
-);
+    ////////////////////////////////////
+    ///// svg animation (homePage) /////
+    ///////////////////////////////////
+    const tween = KUTE.fromTo(
+      "#blob1", {
+        path: "#blob1"
+      }, {
+        path: "#blob2"
+      }, {
+        repeat: 999,
+        duration: 7000,
+        yoyo: true
+      }
+    );
 
-tween.start();
+    tween.start();
 
-///////////////////////////
-// Go back to top BUTTON //
-///////////////////////////
-//Get the button
-var mybutton = document.getElementById("myBtn");
-    
-// When the user scrolls down 200px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
+    ///////////////////////////
+    // Go back to top BUTTON //
+    ///////////////////////////
+    //Get the button
+    var mybutton = document.getElementById("myBtn");
 
-function scrollFunction() {
-  if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
+    // When the user scrolls down 200px from the top of the document, show the button
+    window.onscroll = function () {
+      scrollFunction()
+    };
 
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
+    function scrollFunction() {
+      if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
   </script>
+  <div class="container-formulier">
+
+    <form action="action_page.php">
+
+
+
+      <label for="vnaam">Voornaam</label>
+
+      <input type="text" id="fname" name="voornaam" placeholder="Uw voornaam..">
+
+
+
+      <label for=" naam">Naam</label>
+
+      <input type="text" id="lname" name="lastname" placeholder="Uw Naam..">
+
+
+
+      <label for=" vraag">Vraag</label>
+
+      <textarea id="vraag" name="vraag" placeholder="Stel u vraag hier.." style="height:200px"></textarea>
+
+
+
+      <input type="submit" value="Submit">
+
+
+
+    </form>
+
+  </div>
 </body>
 
 </html>
