FASES-mobiele versie + test background

--- a/fase1.html
+++ b/fase1.html
@@ -10,8 +10,8 @@
 </head>
 
 <body id="fase1-body">
-
-
+<!-- 
+    NIET VAN TOEPASSING OP DIT PAGINA ? -->
 
     <!-- <div class="logo"><a href="index.html"><img src="images/MicrosoftTeams-image (6).png"></a>
     </div>
@@ -31,27 +31,99 @@
 
         </header>
         <div class="container-fases">
+            <div class="container-fase1">
+                
+                <div class="Fase1">
 
-            <div class="Fase1">
+                    <p> In fase 1 is het de bedoeling dat de studenten <span class="red">kennismaken</span> met de
+                        eigen maar ook met anderen disciplines binnen de gezondheidszorg. Dit gebeurd aan de hand van
+                        lessen
+                        maar ook via projecten.
+                        Daarnaast is het belangrijk dat ze enkele <span class="red">communicatieve
+                            basisvaardigheden</span> aanleren die een goede samenwerking
+                        stimuleren.</p>
+                </div>
 
-                <p> In fase 1 is het de bedoeling dat de studenten <span class="red">kennismaken</span> met de
-                    eigen maar ook met anderen disciplines binnen de gezondheidszorg. Dit gebeurd aan de hand van lessen
-                    maar ook via projecten.
-                    Daarnaast is het belangrijk dat ze enkele <span class="red">communicatieve
-                        basisvaardigheden</span> aanleren die een goede samenwerking
-                    stimuleren.</p>
+                <img src="img/20190605_084044.jpg" id="img-fase1" alt="">
+
+                <div class="Fase1 text2">
+                    <h2>
+                        Projecten binnen fase 1: </h2>
+                    <ul>
+                        <li>WeKONEKT</li>
+                        <li>Jobhopdag</li>
+                        <li>Iedereen voor zorg #Brusselshealthcampus (pilootproject)</li>
+
+                    </ul>
+                </div>
+
             </div>
-            <div class="Fase1 text2">
-                <h2>
-                    Projecten binnen fase 1: </h2>
-                <ul>
-                    <li>WeKONEKT</li>
-                    <li>Jobhopdag</li>
-                    <li>Iedereen voor zorg #Brusselshealthcampus (pilootproject)</li>
 
-                </ul>
+            <div class="titel-fase2">
+
+                <h1>FASE II</h1>
+
+            </div>
+            <div class="container">
+
+                <div class="Fase1">
+
+                    <p> In fase 2 gaan studenten <span class="red"> zorgtaken </span>op een interprofessionele manier
+                        benaderen en uitwerken, maar in een simulatiesetting. Dit wil
+                        zeggen dat de studenten in meerdere opleidingsbrede projecten met
+                        elkaar moeten samenwerken en casussen interprofessioneel moeten
+                        benaderen. </p>
+                </div>
+
+                <img src="img/20190605_084044.jpg" alt="">
+                <div class="Fase1 text2">
+                    <h2>
+                        Projecten binnen fase 2: </h2>
+                    <ul>
+                        <li>Discussethicaldilemmastogether (pilootproject)</li>
+                        <li>INS</li>
+                        <li>Project zorgplanning</li>
+
+                    </ul>
+                </div>
+
+
+
+
+
             </div>
 
+            <div class="titel-fase3">
+
+                <h1>FASE III</h1>
+
+            </div>
+            <div class="container">
+
+                <div class="Fase1">
+
+                    <p>In fase 3 moet de student op de <span class="red"> werkvloer</span> zelf intensief
+                        interprofessioneel samenwerken. Dit gebeurd aan de hand van
+                        <span class="red">stages</span> en opdrachten die dienen uitgevoerd worden op de
+                        stageplaats zelf. </p>
+                </div>
+
+                <img src="img/20190605_084044.jpg" alt="">
+                <div class="Fase1 text2">
+                    <h2>
+                        Project binnen fase 3 : </h2>
+                    <ul>
+                        <li>Integrated care stage</li>
+
+
+                    </ul>
+                </div>
+
+
+
+
+
+            </div>
 
 
 
@@ -60,20 +132,16 @@
 
 
 
-    </div>
+        <!-- <a href="fase2.html" id="fase-redirection">Fase II</a> -->
 
 
-
-    <a href="fase2.html" id="fase-redirection">Fase II</a>
-
-
-    <img src="images/zorg.jpeg" id="visueleondersteuning" alt="" style="width: 20%;">
-    <!-- <img src="images/logo-wekonekt.svg" id="visueleondersteuning2" alt="https://www.wekonektweek.brussels/nl/"
+        <img src="images/zorg.jpeg" id="visueleondersteuning" alt="" style="width: 20%;">
+        <!-- <img src="images/logo-wekonekt.svg" id="visueleondersteuning2" alt="https://www.wekonektweek.brussels/nl/"
         style="width: 10%;"> -->
-    <a href="https://www.wekonektweek.brussels/nl/"><img src="images/logo-wekonekt.svg" id="visueleondersteuning2"
-            style="width: 10%;"></a>
+        <a href="https://www.wekonektweek.brussels/nl/"><img src="images/logo-wekonekt.svg" id="visueleondersteuning2"
+                style="width: 10%;"></a>
 
-    <!-- <img src="images/logo-wekonekt.svg" alt="" style="width: 10%;"> -->
+        <!-- <img src="images/logo-wekonekt.svg" alt="" style="width: 10%;"> -->
 
 
 
