test fase1 new design

--- a/fase1.html
+++ b/fase1.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="fase1-body">
-<!-- 
+    <!-- 
     NIET VAN TOEPASSING OP DIT PAGINA ? -->
 
     <!-- <div class="logo"><a href="index.html"><img src="images/MicrosoftTeams-image (6).png"></a>
@@ -32,30 +32,36 @@
         </header>
         <div class="container-fases">
             <div class="container-fase1">
-                
-                <div class="Fase1">
+                <div class="container-voor-img">
+                    <div class="Fase1">
 
-                    <p> In fase 1 is het de bedoeling dat de studenten <span class="red">kennismaken</span> met de
-                        eigen maar ook met anderen disciplines binnen de gezondheidszorg. Dit gebeurd aan de hand van
-                        lessen
-                        maar ook via projecten.
-                        Daarnaast is het belangrijk dat ze enkele <span class="red">communicatieve
-                            basisvaardigheden</span> aanleren die een goede samenwerking
-                        stimuleren.</p>
+                        <p> In fase 1 is het de bedoeling dat de studenten <span class="red">kennismaken</span> met de
+                            eigen maar ook met anderen disciplines binnen de gezondheidszorg. Dit gebeurd aan de hand
+                            van
+                            lessen
+                            maar ook via projecten.
+                            Daarnaast is het belangrijk dat ze enkele <span class="red">communicatieve
+                                basisvaardigheden</span> aanleren die een goede samenwerking
+                            stimuleren.</p>
+                    </div>
+
+
+
+                    <div class="Fase1 text2">
+                        <h2>
+                            Projecten binnen fase 1: </h2>
+                        <ul>
+                            <li>WeKONEKT</li>
+                            <li>Jobhopdag</li>
+                            <li>Iedereen voor zorg #Brusselshealthcampus (pilootproject)</li>
+
+                        </ul>
+                    </div>
                 </div>
+                <figure>
+                    <img src="img/20190605_084044.jpg" id="img-fase1" alt="">
+                </figure>
 
-                <img src="img/20190605_084044.jpg" id="img-fase1" alt="">
-
-                <div class="Fase1 text2">
-                    <h2>
-                        Projecten binnen fase 1: </h2>
-                    <ul>
-                        <li>WeKONEKT</li>
-                        <li>Jobhopdag</li>
-                        <li>Iedereen voor zorg #Brusselshealthcampus (pilootproject)</li>
-
-                    </ul>
-                </div>
 
             </div>
 
