--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="icon" type="image/x-icon" href="img/Logo.png">
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/9ab47f940e.js" crossorigin="anonymous"></script>
@@ -69,10 +70,11 @@
   <!-- Wat is IPO -->
   <section>
     <div class="IPO" id="IPO">
+      <svg id="visual" class="deco" viewBox="0 0 960 540" width="1080" height="740" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><g><g transform="translate(856 192)"><path d="M0 -112.6L112.6 0L0 112.6L-112.6 0Z" fill="#e5e5e5"></path></g><g transform="translate(443 38)"><path d="M0 -104L104 0L0 104L-104 0Z" fill="#e5e5e5"></path></g><g transform="translate(181 526)"><path d="M0 -64L64 0L0 64L-64 0Z" fill="#e5e5e5"></path></g><g transform="translate(672 504)"><path d="M0 -56L56 0L0 56L-56 0Z" fill="#e5e5e5"></path></g></g></svg>
       <div class="wrapper">
         <div class="ipo-container">
           <div class="ipo-tekst">
-            <h2>Wat is <span class="red">IPO? </span></h2>
+            <h2>Wat is <span class="red">IPO?</span></h2>
             <p>Het begrip interprofessioneel verwijst naar de aanwezigheid van meerdere professionele groepen
               (geneeskunde, kinesitherapie, verpleegkunde, voedings - en dieetkunde, …) die in interactie
               examen leren met de bedoeling om <span class="red">samenwerking
@@ -99,6 +101,8 @@
           </div>
         </div>
       </div>
+      <svg id="visual" class="deco2" viewBox="0 0 960 540" width="960" height="540" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><g><g transform="translate(819 444)"><path d="M0 -70L70 0L0 70L-70 0Z" fill="#e5e5e5"></path></g><g transform="translate(793 127)"><path d="M0 -52L52 0L0 52L-52 0Z" fill="#e5e5e5"></path></g><g transform="translate(339 426)"><path d="M0 -49L49 0L0 49L-49 0Z" fill="#e5e5e5"></path></g></g></svg>
+
     </div>
    <section class="section-divider2">
     <div class="custom-shape-divider-bottom-1643461391">
@@ -171,9 +175,8 @@
     <!-- end of card -->
 
   </div>
-  <div class="hr-wrapper">
     <hr class="hr-margin-fases">
-  </div>
+  
   <!-- end of cards -->
   <!-- END THIRD PAGE -->
 
@@ -188,10 +191,11 @@
           <img src="img/ehb schoolfoto.jpg" class="radius-foto">
         </div>
         <div class="ehb-tekst">
+          <h2 class="h2-partners">UAB</h2>
           <p>De IPO werkgroep van de Universitaire
             Associatie Brussel (<span class="orange">UAB</span>) betreft een samenwerkingsverband tussen
             verschillende zorgopleidingen van de Vrije Universiteit Brussel (<span class="blue">VUB</span>) en de
-            Erasmushogeschool (<span class="red">EhB</span>). <br> <br> De doelstelling van de werkgroep is
+            Erasmushogeschool (<span class="red">EHB</span>). <br> <br> De doelstelling van de werkgroep is
             het <span class="red">samenbrengen</span> van vertegenwoordigers <span class="red">van opleidingen</span>
             met studenten
             (toekomstige) zorgverleners om IPO in de respectievelijke curricula in te
@@ -203,6 +207,7 @@
           <img src="img/VUB campus.jpg" class="radius-foto">
         </div>
         <div class="vub-tekst">
+          <h2 class="h2-partners">Werkvloer</h2>
           <p>In IPO wordt er met, van en over elkaar geleerd zodat studenten
             zorgverleners vanaf de <span class="red">start van hun opleiding</span> leren interprofessioneel
             samen te werken. Op die manier wordt de <span class="red">samenwerking op de werkvloer</span>
@@ -255,8 +260,29 @@
   </div>
   <!-- END PARTNERS -->
 
-  <!-- Back to top button -->
+  <!-- FOOTER -->
+  <!-- SOCIALS -->
+  <footer class="socials-footer">
+    <div class="socials-wrapper">
+      <ul>
+        <li>
+          <a href="#" class="fa fa-facebook" target="_blank"></a>
+        </li>
+        <li>
+          <a href="#" class="fa fa-twitter" target="_blank"></a>
+        </li>
+        <li>
+          <a href="#" class="fa fa-instagram" target="_blank"></a>
+        </li>
+      </ul>
+    </div>
+  
+    <nav class="footer-nav" role="navigation">
+      <p>Copyright &copy; 2022-IPO. All rights reserved.</p>
+    </nav>
+  </footer>
 
+  <!-- Back to top button -->
   <button onclick="topFunction()" id="myBtn" title="Go to top" <i class="fas fa-angle-double-up"></i></button>
 
   <script src="js/index.js"></script>
