--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/9ab47f940e.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/kute.js/2.0.0/kute.min.js"></script>
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 </head>
 
 <body>
@@ -57,7 +58,23 @@
   <!-- Wat is IPO -->
   <section>
     <div class="IPO" id="IPO">
-      <svg id="visual" class="deco" viewBox="0 0 960 540" width="1080" height="740" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><g><g transform="translate(856 192)"><path d="M0 -112.6L112.6 0L0 112.6L-112.6 0Z" fill="#e5e5e5"></path></g><g transform="translate(443 38)"><path d="M0 -104L104 0L0 104L-104 0Z" fill="#e5e5e5"></path></g><g transform="translate(181 526)"><path d="M0 -64L64 0L0 64L-64 0Z" fill="#e5e5e5"></path></g><g transform="translate(672 504)"><path d="M0 -56L56 0L0 56L-56 0Z" fill="#e5e5e5"></path></g></g></svg>
+      <svg id="visual" class="deco" viewBox="0 0 960 540" width="1080" height="740" xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+        <g>
+          <g transform="translate(856 192)">
+            <path d="M0 -112.6L112.6 0L0 112.6L-112.6 0Z" fill="#e5e5e5"></path>
+          </g>
+          <g transform="translate(443 38)">
+            <path d="M0 -104L104 0L0 104L-104 0Z" fill="#e5e5e5"></path>
+          </g>
+          <g transform="translate(181 526)">
+            <path d="M0 -64L64 0L0 64L-64 0Z" fill="#e5e5e5"></path>
+          </g>
+          <g transform="translate(672 504)">
+            <path d="M0 -56L56 0L0 56L-56 0Z" fill="#e5e5e5"></path>
+          </g>
+        </g>
+      </svg>
       <div class="wrapper">
         <div class="ipo-container">
           <div class="ipo-tekst">
@@ -88,17 +105,36 @@
           </div>
         </div>
       </div>
-      <svg id="visual" class="deco2" viewBox="0 0 960 540" width="960" height="540" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><g><g transform="translate(819 444)"><path d="M0 -70L70 0L0 70L-70 0Z" fill="#e5e5e5"></path></g><g transform="translate(793 127)"><path d="M0 -52L52 0L0 52L-52 0Z" fill="#e5e5e5"></path></g><g transform="translate(339 426)"><path d="M0 -49L49 0L0 49L-49 0Z" fill="#e5e5e5"></path></g></g></svg>
+      <svg id="visual" class="deco2" viewBox="0 0 960 540" width="960" height="540" xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+        <g>
+          <g transform="translate(819 444)">
+            <path d="M0 -70L70 0L0 70L-70 0Z" fill="#e5e5e5"></path>
+          </g>
+          <g transform="translate(793 127)">
+            <path d="M0 -52L52 0L0 52L-52 0Z" fill="#e5e5e5"></path>
+          </g>
+          <g transform="translate(339 426)">
+            <path d="M0 -49L49 0L0 49L-49 0Z" fill="#e5e5e5"></path>
+          </g>
+        </g>
+      </svg>
 
     </div>
     <section class="section-divider2">
       <div class="custom-shape-divider-top-1643811488">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
-            <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
-            <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+          <path
+            d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+            opacity=".25" class="shape-fill"></path>
+          <path
+            d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+            opacity=".5" class="shape-fill"></path>
+          <path
+            d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+            class="shape-fill"></path>
         </svg>
-    </div>
+      </div>
     </section>
   </section>
   <!-- END of second page -->
@@ -128,44 +164,44 @@
 
   <div class="cards">
     <!-- Card -->
-      <div class="card">
-        <div class="card-image">
-          <i class="fas fa-comments"></i>
-        </div>
-        <div class="card-body">
-          <h4 class="card-title">Fase I</h4>
-          <p>Interprofessionele <span class="red">kennismaking</span> & basisvaardigheden</p>
-        </div>
+    <div class="card">
+      <div class="card-image">
+        <i class="fas fa-comments"></i>
       </div>
+      <div class="card-body">
+        <h4 class="card-title">Fase I</h4>
+        <p>Interprofessionele <span class="red">kennismaking</span> & basisvaardigheden</p>
+      </div>
+    </div>
     <!-- end of card -->
 
     <!-- Card -->
-      <div class="card">
-        <div class="card-image">
-          <i class="fas fa-handshake"></i>
-        </div>
-        <div class="card-body">
-          <h4 class="card-title">Fase II</h4>
-          <p>Interprofessionele <span class="red">zorgtaken</span> in simulatiesetting</p>
-        </div>
+    <div class="card">
+      <div class="card-image">
+        <i class="fas fa-handshake"></i>
       </div>
+      <div class="card-body">
+        <h4 class="card-title">Fase II</h4>
+        <p>Interprofessionele <span class="red">zorgtaken</span> in simulatiesetting</p>
+      </div>
+    </div>
     <!-- end of card -->
 
     <!-- Card -->
-      <div class="card">
-        <div class="card-image">
-          <i class="fas fa-stethoscope"></i>
-        </div>
-        <div class="card-body">
-          <h4 class="card-title">Fase III</h4>
-          <p>Interprofessionele <span class="red">zorg</span> op de <span class="red">werkvloer</span></p>
-        </div>
+    <div class="card">
+      <div class="card-image">
+        <i class="fas fa-stethoscope"></i>
       </div>
+      <div class="card-body">
+        <h4 class="card-title">Fase III</h4>
+        <p>Interprofessionele <span class="red">zorg</span> op de <span class="red">werkvloer</span></p>
+      </div>
+    </div>
     <!-- end of card -->
 
   </div>
-    <hr class="hr-margin-fases">
-  
+  <hr class="hr-margin-fases">
+
   <!-- end of cards -->
   <!-- END THIRD PAGE -->
 
@@ -205,16 +241,16 @@
       </div>
     </div>
   </div>
-<!-- schema opleidingen -->
-<section class="section-opleidingen">
+  <!-- schema opleidingen -->
+  <section class="section-opleidingen">
 
-  <div class="schema-opleidingen">
-    <img src="img/opleidingen-schema.jpg" alt="opleidingen">
-  </div>
-  
-</section>
+    <div class="schema-opleidingen">
+      <img src="img/opleidingen-schema.jpg" alt="opleidingen">
+    </div>
+
+  </section>
   <!-- END PARTNERS -->
-<div class="container-formulier">
+  <div class="container-formulier">
 
     <form action="https://formsubmit.co/zanidobruna@hotmail.com" method="POST">
 
@@ -261,7 +297,7 @@
         </li>
       </ul>
     </div>
-  
+
     <nav class="footer-nav" role="navigation">
       <p>Copyright &copy; 2022-IPO. All rights reserved.</p>
     </nav>
@@ -320,8 +356,8 @@
       document.documentElement.scrollTop = 0;
     }
   </script>
-  
-  
+
+
 </body>
 
 </html>
