--- a/static/html/leerlijn.html
+++ b/static/html/leerlijn.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="img/Logo.png">
-    <link rel="stylesheet" href="leerlijn.css">
+    <link rel="stylesheet" href="/static/leerlijn.css">
     <title>Leerlijn</title>
 </head>
+
 <body>
     <!-- NAVIGATION -->
-  <span id="home"></span>
-  <div class="logo"><a href="index.html"><img src="img/Logo.png"></a>
-  </div>
-  <nav>
-    <div class="topnav" id="myTopnav">
-      <a href="#home">Home</a>
-      <a href="#IPO">IPO</a>
-      <a href="#leerlijn">Leerlijn</a>
-      <a href="#partners">Partners</a>
+    <span id="home"></span>
+    <div class="logo"><a href="index.html"><img src="/static/img/Logo.png"></a>
     </div>
-  </nav>
-  <!-- END NAVIGATION -->
-<div class="home-picture">
-    <figure>
-        <div class="parallax">
-            
+    <nav>
+        <div class="topnav" id="myTopnav">
+            <a href="#home">Home</a>
+            <a href="#IPO">IPO</a>
+            <a href="#leerlijn">Leerlijn</a>
+            <a href="#partners">Partners</a>
         </div>
-    </figure>
-</div>
+    </nav>
+    <!-- END NAVIGATION -->
+    <div class="home-picture">
+        <figure>
+            <div class="parallax">
+
+            </div>
+        </figure>
+    </div>
     <div class="fases">
         <div class="left">
             <div class="container-fluid">
-                    <div class="title box">
-                        <span>Leerlijn</span>
-                    </div>
-                    <div class="left-wrapper">
-                        <div class="left-container">
-                            <div class="left-links">
-                                <ul>
-                                    <li><a href=""></a></li>
-                                    <li><a href=""></a></li>
-                                    <li><a href=""></a></li>
-                                </ul>
-                            </div>
+                <div class="title box">
+                    <span>Leerlijn</span>
+                </div>
+                <div class="left-wrapper">
+                    <div class="left-container">
+                        <div class="left-links">
+                            <ul>
+                                <li><a href=""></a></li>
+                                <li><a href=""></a></li>
+                                <li><a href=""></a></li>
+                            </ul>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
         <div class="right">
@@ -53,30 +55,34 @@
                 <div class="inner">
                     <div class="introduction-fase">
                         <h1>titel</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos commodi sapiente non mollitia dicta quas quia pariatur asperiores est odio distinctio rerum voluptates ad nisi totam, laboriosam et qui.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos commodi sapiente
+                            non mollitia dicta quas quia pariatur asperiores est odio distinctio rerum voluptates ad
+                            nisi totam, laboriosam et qui.</p>
                     </div>
                     <div class="content-fase">
                         <div class="content-tekst">
                             <h2>Fase I</h2>
-                            <p> In fase 1 is het de bedoeling dat de studenten <span class="red">kennismaken</span> met de
-                                eigen maar ook met anderen disciplines binnen de gezondheidszorg. Dit gebeurd aan de hand
+                            <p> In fase 1 is het de bedoeling dat de studenten <span class="red">kennismaken</span> met
+                                de
+                                eigen maar ook met anderen disciplines binnen de gezondheidszorg. Dit gebeurd aan de
+                                hand
                                 van
                                 lessen
                                 maar ook via projecten.
                                 Daarnaast is het belangrijk dat ze enkele <span class="red">communicatieve
-                                basisvaardigheden</span> aanleren die een goede samenwerking
+                                    basisvaardigheden</span> aanleren die een goede samenwerking
                                 stimuleren.
                             </p>
-                            
+
                             <h3>Projecten binnen fase 1: </h3>
                             <ul>
                                 <li>WeKONEKT</li>
                                 <li>Jobhopdag</li>
                                 <li>Iedereen voor zorg #Brusselshealthcampus (pilootproject)</li>
                             </ul>
-                            </div>
+                        </div>
                         <div class="content-image">
-                            <img src="img/20190605_084044.jpg">
+                            <img src="/static/img/20190605_084044.jpg">
                         </div>
                     </div>
                 </div>
@@ -84,11 +90,12 @@
                     <div class="content-fase2">
                         <div class="content-tekst">
                             <h2>Fase II</h2>
-                            <p> In fase 2 gaan studenten <span class="red"> zorgtaken </span>op een interprofessionele manier
+                            <p> In fase 2 gaan studenten <span class="red"> zorgtaken </span>op een interprofessionele
+                                manier
                                 benaderen en uitwerken, maar in een simulatiesetting. Dit wil
                                 zeggen dat de studenten in meerdere opleidingsbrede projecten met
                                 elkaar moeten samenwerken en casussen interprofessioneel moeten
-                                benaderen. 
+                                benaderen.
                             </p>
 
                             <h3>Projecten binnen fase 2: </h3>
@@ -97,9 +104,9 @@
                                 <li>INS</li>
                                 <li>Project zorgplanning</li>
                             </ul>
-                            </div>
+                        </div>
                         <div class="content-image2">
-                            <img src="img/20190306_100617.jpg">
+                            <img src="/static/img/20190306_100617.jpg">
                         </div>
                     </div>
                 </div>
@@ -119,7 +126,7 @@
                             </ul>
                         </div>
                         <div class="content-image">
-                            <img src="img/12195115_10206689982022325_1103512907390708517_o.jpg">
+                            <img src="/static/img/12195115_10206689982022325_1103512907390708517_o.jpg">
                         </div>
                     </div>
                 </div>
@@ -127,4 +134,5 @@
         </div>
     </div>
 </body>
+
 </html>
