test 2 gelinkt code + readme text

--- a/static/html/leerlijn.html
+++ b/static/html/leerlijn.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="img/Logo.png">
-    <link rel="stylesheet" href="/static/leerlijn.css">
+    <link rel="stylesheet" href="../static/leerlijn.css">
     <title>Leerlijn</title>
 </head>
 
 <body>
     <!-- NAVIGATION -->
     <span id="home"></span>
-    <div class="logo"><a href="index.html"><img src="/static/img/Logo.png"></a>
+    <div class="logo"><a href="index.html"><img src="../static/img/Logo.png"></a>
     </div>
     <nav>
         <div class="topnav" id="myTopnav">
@@ -82,7 +82,7 @@
                             </ul>
                         </div>
                         <div class="content-image">
-                            <img src="/static/img/20190605_084044.jpg">
+                            <img src="../static/img/20190605_084044.jpg">
                         </div>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                             </ul>
                         </div>
                         <div class="content-image2">
-                            <img src="/static/img/20190306_100617.jpg">
+                            <img src="../static/img/20190306_100617.jpg">
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                             </ul>
                         </div>
                         <div class="content-image">
-                            <img src="/static/img/12195115_10206689982022325_1103512907390708517_o.jpg">
+                            <img src="../static/img/12195115_10206689982022325_1103512907390708517_o.jpg">
                         </div>
                     </div>
                 </div>
