--- a/static/index.html
+++ b/static/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- <link rel="icon" type="image/x-icon" href="img/Logo.png"> -->
-  <link href="/static/css/reset.css" rel="stylesheet" />
-  <link href="/static/css/style.css" rel="stylesheet" />
+  <link href="css/reset.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/9ab47f940e.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/kute.js/2.0.0/kute.min.js"></script>
   <link rel="shortcut icon" type="image/png" href="/static/img/favicon.png">
@@ -85,7 +85,7 @@
                 en kwaliteit</span> van zorg te verbeteren.</p>
           </div>
           <div class="ipo-foto">
-            <img src="/static/img/Teamwork (1).png">
+            <img src="../static/img/Teamwork (1).png">
           </div>
         </div>
         <hr>
@@ -101,7 +101,7 @@
             </ul>
           </div>
           <div class="ipo-foto">
-            <img src="/static/img/training-effectief-samenwerken.jpg" class="radius-foto">
+            <img src="../static/img/training-effectief-samenwerken.jpg" class="radius-foto">
           </div>
         </div>
       </div>
@@ -207,13 +207,13 @@
 
   <!-- START PARTNERS -->
   <div class="partners" id="partners">
-    <img src="/static/img/EHB-50fps.gif" class="ehb-gif">
-    <img src="/static/img/VUB-50fps.gif" class="vub-gif">
+    <img src="../static/img/EHB-50fps.gif" class="ehb-gif">
+    <img src="../static/img/VUB-50fps.gif" class="vub-gif">
     <div class="wrapper wrapper-partner">
       <h2>Samenwerkingspartners</h2>
       <div class="ehb-container">
         <div class="ehb-foto">
-          <img src="/static/img/ehb schoolfoto.jpg" class="radius-foto">
+          <img src="../static/img/ehb schoolfoto.jpg" class="radius-foto">
         </div>
         <div class="ehb-tekst">
           <h2 class="h2-partners">UAB</h2>
@@ -229,7 +229,7 @@
       </div>
       <div class="vub-container">
         <div class="vub-foto">
-          <img src="/static/img/VUB campus.jpg" class="radius-foto">
+          <img src="../static/img/VUB campus.jpg" class="radius-foto">
         </div>
         <div class="vub-tekst">
           <h2 class="h2-partners">Werkvloer</h2>
@@ -245,7 +245,7 @@
   <section class="section-opleidingen">
 
     <div class="schema-opleidingen">
-      <img src="/static/img/opleidingen-schema.jpg" alt="opleidingen">
+      <img src="../static/img/opleidingen-schema.jpg" alt="opleidingen">
     </div>
 
   </section>
@@ -306,8 +306,8 @@
   <!-- Back to top button -->
   <button onclick="topFunction()" id="myBtn" title="Go to top" <i class="fas fa-angle-double-up"></i></button>
 
-  <script src="/static/java-script/index.js"></script>
-  <script type="text/javascript" src="/static/vanilla-tilt.js"></script>
+  <script src="../static/java-script/index.js"></script>
+  <script type="text/javascript" src="../static/vanilla-tilt.js"></script>
   <script>
     VanillaTilt.init(document.querySelectorAll(".card"), {
       max: 15,
