--- a/static/leerlijn.html
+++ b/static/leerlijn.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="img/Logo.png">
-<<<<<<< HEAD:leerlijn.html
     <link rel="stylesheet" href="./css/style.css">
-=======
-    <link rel="stylesheet" href="../static/leerlijn.css">
->>>>>>> 5a81d73f3f98d7fba996f3e138a3c6888eec43fd:static/html/leerlijn.html
     <title>Leerlijn</title>
 </head>
-
 <body>
     <!-- NAVIGATION -->
-<<<<<<< HEAD:leerlijn.html
   <span id="home"></span>
   <div class="logo"><a href="#home"><img src="img/Logo.png" alt="logo"></a>
   </div>
@@ -44,84 +37,57 @@
     <figure>
         <div class="parallax">
             
-=======
-    <span id="home"></span>
-    <div class="logo"><a href="index.html"><img src="../static/img/Logo.png"></a>
-    </div>
-    <nav>
-        <div class="topnav" id="myTopnav">
-            <a href="#home">Home</a>
-            <a href="#IPO">IPO</a>
-            <a href="#leerlijn">Leerlijn</a>
-            <a href="#partners">Partners</a>
->>>>>>> 5a81d73f3f98d7fba996f3e138a3c6888eec43fd:static/html/leerlijn.html
         </div>
-    </nav>
-    <!-- END NAVIGATION -->
-    <div class="home-picture">
-        <figure>
-            <div class="parallax">
-
-            </div>
-        </figure>
-    </div>
+    </figure>
+</div>
     <div class="fases">
         <div class="left">
             <div class="container-fluid">
-                <div class="title box">
-                    <span>Leerlijn</span>
-                </div>
-                <div class="left-wrapper">
-                    <div class="left-container">
-                        <div class="left-links">
-                            <ul>
-                                <li><a href=""></a></li>
-                                <li><a href=""></a></li>
-                                <li><a href=""></a></li>
-                            </ul>
+                    <div class="title box">
+                        <span>Leerlijn</span>
+                    </div>
+                    <div class="left-wrapper">
+                        <div class="left-container">
+                            <div class="left-links">
+                                <ul>
+                                    <li><a href=""></a></li>
+                                    <li><a href=""></a></li>
+                                    <li><a href=""></a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
         <div class="right">
             <div class="container-wrapper">
                 <div class="inner">
                     <div class="introduction-fase">
-<<<<<<< HEAD:leerlijn.html
                         <h1>Waarom?</h1>
                         <p>Aan de hand van deze leerlijn leer je interprofessioneel samenwerken met andere collega's uit verschillende opleidingen, waar je potentieel in de toekomst mee zal moeten werken. Hieronder vind je een overzicht van de fases met elk een project(en).</p>
-=======
-                        <h1>titel</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos commodi sapiente
-                            non mollitia dicta quas quia pariatur asperiores est odio distinctio rerum voluptates ad
-                            nisi totam, laboriosam et qui.</p>
->>>>>>> 5a81d73f3f98d7fba996f3e138a3c6888eec43fd:static/html/leerlijn.html
                     </div>
                     <div class="content-fase">
                         <div class="content-tekst">
                             <h2>Fase I</h2>
-                            <p> In fase 1 is het de bedoeling dat de studenten <span class="red">kennismaken</span> met
-                                de
-                                eigen maar ook met anderen disciplines binnen de gezondheidszorg. Dit gebeurd aan de
-                                hand
+                            <p> In fase 1 is het de bedoeling dat de studenten <span class="red">kennismaken</span> met de
+                                eigen maar ook met anderen disciplines binnen de gezondheidszorg. Dit gebeurd aan de hand
                                 van
                                 lessen
                                 maar ook via projecten.
                                 Daarnaast is het belangrijk dat ze enkele <span class="red">communicatieve
-                                    basisvaardigheden</span> aanleren die een goede samenwerking
+                                basisvaardigheden</span> aanleren die een goede samenwerking
                                 stimuleren.
                             </p>
-
+                            
                             <h3>Projecten binnen fase 1: </h3>
                             <ul>
                                 <li>WeKONEKT</li>
                                 <li>Jobhopdag</li>
                                 <li>Iedereen voor zorg #Brusselshealthcampus (pilootproject)</li>
                             </ul>
-                        </div>
+                            </div>
                         <div class="content-image">
-                            <img src="../static/img/20190605_084044.jpg">
+                            <img src="img/20190605_084044.jpg">
                         </div>
                     </div>
                 </div>
@@ -129,12 +95,11 @@
                     <div class="content-fase2">
                         <div class="content-tekst">
                             <h2>Fase II</h2>
-                            <p> In fase 2 gaan studenten <span class="red"> zorgtaken </span>op een interprofessionele
-                                manier
+                            <p> In fase 2 gaan studenten <span class="red"> zorgtaken </span>op een interprofessionele manier
                                 benaderen en uitwerken, maar in een simulatiesetting. Dit wil
                                 zeggen dat de studenten in meerdere opleidingsbrede projecten met
                                 elkaar moeten samenwerken en casussen interprofessioneel moeten
-                                benaderen.
+                                benaderen. 
                             </p>
 
                             <h3>Projecten binnen fase 2: </h3>
@@ -143,9 +108,9 @@
                                 <li>INS</li>
                                 <li>Project zorgplanning</li>
                             </ul>
-                        </div>
+                            </div>
                         <div class="content-image2">
-                            <img src="../static/img/20190306_100617.jpg">
+                            <img src="img/20190306_100617.jpg">
                         </div>
                     </div>
                 </div>
@@ -165,7 +130,7 @@
                             </ul>
                         </div>
                         <div class="content-image">
-                            <img src="../static/img/12195115_10206689982022325_1103512907390708517_o.jpg">
+                            <img src="img/12195115_10206689982022325_1103512907390708517_o.jpg">
                         </div>
                     </div>
                 </div>
@@ -174,5 +139,4 @@
     </div>
     <script src="js/index.js"></script>
 </body>
-
 </html>
